--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-bootstrap": "^2.9.1",
     "react-date-picker": "^10.5.2",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
     "react-paginate": "^8.2.0",
     "react-qr-code": "^2.0.12",
     "react-router-dom": "^6.16.0",
