--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-icons": "^5.0.1",
     "react-paginate": "^8.2.0",
     "react-qr-code": "^2.0.12",
+    "react-qr-scanner": "^1.0.0-alpha.11",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
     "react-typing-effect": "^2.0.5",
