--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-date-picker": "^10.5.2",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
+    "react-otp-input": "^3.1.1",
     "react-paginate": "^8.2.0",
     "react-qr-code": "^2.0.12",
     "react-qr-scanner": "^1.0.0-alpha.11",
