--- a/package.json
+++ b/package.json
@@ -15,16 +15,19 @@
     "bootstrap": "^5.3.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
+    "react-chartjs-2": "^5.2.0",
     "react-date-picker": "^10.5.2",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-otp-input": "^3.1.1",
     "react-paginate": "^8.2.0",
+    "react-pro-sidebar": "^1.1.0",
     "react-qr-code": "^2.0.12",
     "react-qr-scanner": "^1.0.0-alpha.11",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
     "react-typing-effect": "^2.0.5",
+    "reactstrap": "^9.2.2",
     "sweetalert2": "^11.9.0",
     "web-vitals": "^2.1.4"
   },
@@ -51,5 +54,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "autoprefixer": "^9.8.6",
+    "postcss": "^8.4.38",
+    "postcss-cli": "^11.0.0",
+    "tailwindcss": "^3.4.3"
   }
 }
